@@ -1,3 +1,8 @@
+5-July-2011 Michael Babker Version 1.8 Changes
+# Fix routing bug for front end edit
+- Remove create link from feed view because of routing bug
+~ Rename routing functions specific to podcast edit
+
 30-June-2011 Michael Babker Version 1.8 Changes
 ~ Rename the layouts for the HTML view
 ~ Language strings for various menu components
